devcontainerのplatform指定をやめた

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,6 @@
   // https://docs.microsoft.com/ja-jp/dotnet/architecture/microservices/net-core-net-framework-containers/official-net-docker-images
   // https://hub.docker.com/_/microsoft-dotnet-sdk/
   "image": "mcr.microsoft.com/dotnet/sdk:6.0",
-  "runArgs": [ "--platform", "linux/amd64" ],   // azコマンドがarmイメージだと動かなかった
   "containerEnv": {
     "TZ": "Asia/Tokyo"
   },
@@ -12,5 +11,6 @@
     "ms-azuretools.vscode-azureappservice",
     "EditorConfig.EditorConfig"
   ],
-  "postCreateCommand": "apt update && apt install --yes ssh zip && curl -sL https://aka.ms/InstallAzureCLIDeb | bash"
+  // 最後のsshコマンドは失敗してエラー出るが、コンテナ作成は完了するしknown_hostsも出来るので気にしない
+  "postCreateCommand": "apt update && apt install --yes ssh && ssh -o 'StrictHostKeyChecking=no' git@github.com"
 }
